# Level-Headed

./: .gitignore  CREDITS  Changelog.txt  Credits.txt  Quick Update Debug Plugins.bat  Quick Update Debug Plugins.sh  Quick Update Release Plugins.bat  Quick Update Release Plugins.sh  README.md  update_plugins.bat  update_plugins.sh
Common_Files/: Random.cpp  Random.h  Version.h
Doc/: Changelog.txt  Credits.txt  Level-Headed Water Vapor Build Readme.docx
Level-Headed/: CLI_Passthrough.cpp  CLI_Passthrough.h  CMakeLists.txt  Common_Strings.h  Interpreter_Interface.h  Level-Headed.pro  Level-Headed.pro.user.7289c65.3.3-pre1  Level-Headed.rc  Main.cpp  Main_Window.cpp  Main_Window.h  Main_Window.ui  Plugin_Handler.cpp  Plugin_Handler.h  Update_Checker.cpp  Update_Checker.h  Update_Dialog.cpp  Update_Dialog.h  Update_Dialog.ui  Update_Thread.cpp  Update_Thread.h
Level-Headed/Build_Scripts/Unix/: Compile.sh  Compile_Level-Headed.sh  Deploy_New_Version.sh  Installer_Test.sh  Prepare_Runtime.sh
Level-Headed/Build_Scripts/Windows/: Install_SAM_Dependencies.sh  Prepare_Runtime.bat
Level-Headed/Build_Scripts/Windows/Installer/: How to Compile the Installer.txt  LICENSE.txt  Level-Headed.nsi
SMB1/Common SMB1 Files/: Background.h  Brick.h  Brick_String.h  Enemy_Item.h  Enemy_Item_String.h  Header_String.h  Level.h  Level_Attribute.h  Level_Attribute_String.h  Level_Compliment.h  Level_Compliment_String.h  Level_String.h  Level_Type.h  Level_Type_String.h  Object_Item.h  Object_Item_String.h  Scenery.h
SMB1/Common_SMB1_Files/: Background_String.h  Castle.h  Enemy_Item.h  Enemy_Item_String.h  Fix_Strings.h  Header_String.h  Level.h  Level_Compliment.h  Level_String.h  Level_Type.h  Level_Type_String.h  Object_Item.h  Object_Item_String.h  Scenery_String.h
SMB1/Patches/: Hammer Suit.ips  Harmony7.ips  Hyper Mario Rev A.ips  Hyper Mario Rev B.ips  Mario in Time is Ticking.ips  Super Bubba Bros.ips
SMB1/Research Docs/: Enemy Values.xlsx  Level Offsets.xlsx  Map Table Room Order.xlsx  Object Values.xlsx  Room IDs.xlsx  Room Order Table.xlsx  Supported ROMs.xlsx
SMB1/Research_Docs/: .~lock.Enemy Values.xlsx#  Enemy Values.csv  Enemy Values.xlsx  Free Space.csv  Level Offsets.csv  Level Offsets.xlsx  Move Tables for 20 Levels.csv  Object Values.csv  Object Values.xlsx  Room IDs.csv  Room Order Table.csv  Supported ROMs.csv
SMB1/SMB1_Compliance_Generator/: Block_Data.h  Bridge_Generator.cpp  Bridge_Generator.h  Buffer_Data.h  CMakeLists.txt  Castle_Generator.cpp  Castle_Generator.h  Common_Pattern_Spawner.cpp  Common_Pattern_Spawner.h  Continuous_Enemies_Spawner.cpp  Continuous_Enemies_Spawner.h  Difficulty.h  End_Pattern.h  End_Spawner.cpp  End_Spawner.h  Enemy_Buffer.cpp  Enemy_Buffer.h  Enemy_Buffer_Data.h  Enemy_Spawner.cpp  Enemy_Spawner.h  Enemy_Writer.cpp  Enemy_Writer.h  Extra_Enemy_Args.h  First_Page_Handler.cpp  First_Page_Handler.h  Header_Writer.cpp  Header_Writer.h  Island_Generator.cpp  Island_Generator.h  Item_Buffer.cpp  Item_Buffer.h  Item_Spawner.cpp  Item_Spawner.h  Item_Type.h  Item_Writer.cpp  Item_Writer.h  Level_Crawler.cpp  Level_Crawler.h  Level_Crawler.h.autosave  Level_Generator.cpp  (+53 more)
SMB1/SMB1_Compliance_Sample_Scripts/Coin Test/: Level_1_1.lvl  SMB1.map
SMB1/SMB1_Compliance_Sample_Scripts/It Plays Itself/: It Plays Itself.map  Level_1_1.lvl  Level_1_2.lvl
SMB1/SMB1_Compliance_Sample_Scripts/SMB1 1-1/: Level_1_1.lvl  SMB1 1-1.map
SMB1/SMB1_Compliance_To_SMB1/: Base_Game_Settings.h  CLI_Parser.cpp  CLI_Parser.h  CMakeLists.txt  Config_File_Handler.cpp  Config_File_Handler.h  Configure_Base_Form.cpp  Configure_Base_Form.h  Configure_Base_Form.ui  Configure_Difficulty_Form.cpp  Configure_Difficulty_Form.h  Configure_Difficulty_Form.ui  Configure_Level_Form.cpp  Configure_Level_Form.h  Configure_Level_Form.ui  Configure_Settings_Form.cpp  Configure_Settings_Form.h  Configure_Settings_Form.ui  Difficulty_Base_Form.cpp  Difficulty_Base_Form.h  Difficulty_Base_Form.ui  Difficulty_Configurations.cpp  Difficulty_Configurations.h  Difficulty_Level_Configurations.cpp  Difficulty_Level_Configurations.h  Difficulty_Level_Form.cpp  Difficulty_Level_Form.h  Difficulty_Level_Form.ui  Difficulty_Level_Settings.h  Difficulty_Settings.h  Enemy_Handler.cpp  Enemy_Handler.h  Hacks_Handler.cpp  Hacks_Handler.h  Header_Handler.cpp  Header_Handler.h  Item_Handler.cpp  Item_Handler.h  Level_Generator.cpp  Level_Generator.h  (+17 more)
SMB1/SMB1_Writer/: Background.h  Binary_Manipulator.cpp  Binary_Manipulator.h  Bowser_Bridge_Destroyer.cpp  Bowser_Bridge_Destroyer.h  Byte_Writer.cpp  Byte_Writer.h  CMakeLists.txt  Color.h  Colors.cpp  Colors.h  Enemy_Buffer.cpp  Enemy_Buffer.h  Enemy_Bytes_Tracker.cpp  Enemy_Bytes_Tracker.h  Enemy_Writer.cpp  Enemy_Writer.h  Graphics.cpp  Graphics.h  Graphics_Combiner.cpp  Graphics_Combiner.h  Graphics_Offsets.cpp  Graphics_Offsets.h  Hacks.cpp  Hacks.h  Header_Writer.cpp  Header_Writer.h  Item_Buffer.cpp  Item_Buffer.h  Item_Writer.cpp  Item_Writer.h  Level.h  Level_Offset.cpp  Level_Offset.h  Level_Offsets.cpp  Level_Pointers_Writer.cpp  Level_Pointers_Writer.h  Level_Type.h  Midpoint_Writer.cpp  Midpoint_Writer.h  (+39 more)
SMB1_Writer/: Background.h  Binary_Manipulator.cpp  Binary_Manipulator.h  Brick.h  Item_Writer.cpp  Item_Writer.h  Level_Offset.h  Level_Offsets.cpp  Level_Offsets.h  Object_Writer.cpp  Object_Writer.h  ROM_Checksum.h  ROM_Checksums.cpp  ROM_Checksums.h  SMB1_Writer.cpp  SMB1_Writer.h  SMB1_Writer.pro
